Fix Java warnings in backend services